--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ futures = "0.3.31"
 rand = "0.9.0"
 bincode = "1.3.3"
 anyhow = "1.0.90"
-reqwest = { version = "0.12.12", features = ["json", "multipart"] }
+reqwest = { version = "0.12.12", features = ["json", "multipart", "rustls-tls"] }
 tokio = { version = "1.42.0", features = ["full", "rt-multi-thread"] }
 
 async-trait = "0.1.86"
