--- a/.github/workflows/auto-close-bad-issue.yml
+++ b/.github/workflows/auto-close-bad-issue.yml
@@ -4,24 +4,28 @@ on:
   issues:
     types: [opened]
 
+permissions:
+  issues: write
+
 jobs:
   close_if_banned:
     runs-on: ubuntu-latest
     steps:
-      - name: Check for banned keywords in issue title or body
+      - name: Check for banned keywords
         uses: actions/github-script@v7
         with:
           script: |
             const bannedKeywords = ["刷星", "伪造"];
             const title = context.payload.issue.title || "";
             const body = context.payload.issue.body || "";
-            const found = bannedKeywords.some(word => 
+            const found = bannedKeywords.some(word =>
               title.includes(word) || body.includes(word)
             );
 
             if (found) {
-              await github.issues.update({
-                ...context.repo,
+              await github.rest.issues.update({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
                 issue_number: context.issue.number,
                 state: "closed"
               });
