--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+tracing = "0.1.41"
 solana-sdk = "2.3.0"
 solana-client = "2.3.0"
 solana-program = "2.3.0"
